<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="penguin_description">Image of a penguin on Earth</string>
    <string name="create_account">Create Account</string>
    <string name="new_user">New user?</string>
    <string name="login">Login</string>
    <string name="returning_user">Returning user?</string>
    <string name="planetze_logo">Planetze Logo</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="please_input_first_name">Please input first name</string>
    <string name="please_input_last_name">Please input last name</string>
    <string name="last_name">Last Name</string>
    <string name="please_input_email_adress">Please input email-address</string>
    <string name="email">Email</string>
    <string name="please_input_strong_password">Please input strong password</string>
    <string name="password">Password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="go_back">Go back</string>
    <string name="loginTitle">LOGIN</string>
    <string name="enter_email_adress">Enter email adress</string>
    <string name="enter_password">Enter password</string>
    <string name="loginBtn">Log in</string>
    <string name="image_of_woman_siting_on_a_bench_with_company_phone_application">Image of woman siting on a bench with company phone application</string>
    <string name="home">Home</string>
    <string name="eco_tracker">Eco-Tracker</string>
    <string name="eco_gauge">Eco-Gauge</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="profile_settings">PROFILE SETTINGS</string>
    <string name="change_your_first_name">Change your first name</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_your_last_name">Change your last name</string>
    <string name="continueRegister">Continue</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_your_password_send_reset_email_below">Forgot your password? Send reset email below</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_send_verification_email">Re-send Verification Email</string>
    <string name="settingsSettings">SETTINGS</string>
    <string name="reinitialize_primary_emission_data">Reinitialize Primary Emission Data</string>
    <string name="reset_primary_data">Reset Primary Data</string>
    <string name="reset_all_data">Reset All Data</string>
    <string name="reset_data">Reset Data</string>
    <string name="go_home">Go Home</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="your_email_is_not_verifiied">Your email is not verified</string>
    <string name="your_email_is_verified">Your email is verified</string>
    <string name="welcome">WELCOME,</string>
    <string name="annual_carbon_emissions">Annual carbon emissions</string>
    <string name="default_user">User</string>
    <string name="better_default">You\'re ahead of 0% of people nationally!</string>
    <string name="annual_default">0 tonnes of CO\u2082</string>
    <string name="enter_activity">Enter Activity</string>
    <string name="save_activity">Save Activity</string>
    <string name="edit_activity_title">Edit Activity Title</string>
    <string name="update_activity">Update Activity</string>
    <string name="activities_will_be_displayed_here">Activities will be displayed here</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="adopt_habits">Adopt Habits</string>


    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>

    <string name="transportation">Transportation</string>
    <string name="shopping">Shopping</string>
    <string name="energy">Energy</string>
    <string name="food">Food</string>
    <string name="personal_vehicle">Personal Vehicle</string>
    <string name="cycling_or_walking">Cycling or Walking</string>
    <string name="flight">Flight</string>
    <string name="select_a_mode_of_transportation">Select a Mode of Transportation</string>
    <string name="text">Text</string>
    <string name="text2">Text</string>
    <string name="please_provide_the_following_information">Please provide the following information:</string>
    <string name="meal_type">Meal Type:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="public_transportation">Public Transportation</string>
    <string name="enter_number_of_flights_taken_today">Enter Number of Flights Taken Today:</string>
    <string name="save">Save</string>
    <string name="short_haul_or_long_haul">Short-Haul or Long-Haul:</string>
    <string name="enter_value">Enter value</string>
    <string name="new_clothes">New Clothes</string>
    <string name="other_purchases">Other Purchases</string>
    <string name="electronics">Electronics</string>
    <string name="number_of_clothing_items_purchased">Number of clothing items purchased:</string>
    <string name="number_of_devices_purchased">Number of Devices Purchased:</string>
    <string name="enter_number">Enter number</string>
    <string name="energy_type">Energy Type:</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="time_in_hours_spent_on_public_transport">Time in Hours Spent on Public Transport:</string>

    <string name="Plantze">Eco Gauge</string>
    <string-array name="time_options">
        <item>Today</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>



</resources>