<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_background_gradient"
    tools:context=".Login.LoginActivityView">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/loginTitle"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabelLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_adress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="@id/loginText"
        android:layout_marginVertical="30dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTxtFieldLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailLabelLogin"
        app:layout_constraintStart_toStartOf="@id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/passwordLabelLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtFieldLogin"
        app:layout_constraintStart_toStartOf="@id/loginText"
        android:layout_marginVertical="30dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTxtFieldLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabelLogin"
        app:layout_constraintStart_toStartOf="@id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="60dp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxtFieldLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/brightBlue"
        app:flow_horizontalBias="0.5"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="120dp"/>

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/forgot_password"
        android:background="@android:color/transparent"
        android:textColor="@color/brightBlue"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.5"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="120dp"/>

    <ImageView
        android:id="@+id/phoneWomanImag"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_of_woman_siting_on_a_bench_with_company_phone_application"
        android:src="@drawable/company_photo_edited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>